<resources>
    <string name="app_name">Pcamarounds</string>
    <string name="camarounds">Camarounds</string>
    <string name="channel_description" translatable="false">channel_description</string>
    <string name="skip">Skip</string>
    <string name="welcome_to_camarounds">Welcome to Camarounds</string>
    <string name="offering_your_services_has_never_been_so_neasy">Offering your services has never been so\neasy.</string>
    <string name="next">Next</string>
    <string name="to_access">To access</string>
    <string name="to_explore">To explore</string>
    <string name="get_requests">Get Requests</string>
    <string name="hundreds">Hundreds of clients await you.</string>
    <string name="copyright_2020_camarounds">Copyright @ 2020 Camarounds</string>
    <string name="did_you_forget_your_password">Did you forget your password?</string>
    <string name="welcome">¡BIENVENIDO!</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="log_in">Iniciar Sesión</string>
    <string name="enter_your_email_and_we_will_send_you_instructions_to_reset_your_password">Enter your email and we will send you\ninstructions to reset your\npassword.</string>
    <string name="submit">Submit</string>
    <string name="select_your_location">Select your location</string>
    <string name="find_an_address">Find an address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="menu">INICIO</string>
    <string name="search">Buscar</string>
    <string name="messages">Mensajes</string>
    <string name="my_profile">perfil</string>
    <string name="my_camarounds">My Camarounds</string>
    <string name="i_settle">I settle</string>
    <string name="pending">Pending</string>
    <string name="my_ncamarounds">Camarounds</string>
    <string name="average_for_camaround">Average for Camaround</string>
    <string name="income">Income</string>
    <string name="awarded_camarounds">AWARDED CAMAROUNDS</string>
    <string name="latest_projects">Latest Projects</string>
    <string name="search_location_city">Search Location / City</string>
    <string name="show_profile"><u>Show profile</u></string>
    <string name="balance">Balance</string>
    <string name="setting">Setting</string>
    <string name="personal_information">Personal information</string>
    <string name="change_password">Change Password</string>
    <string name="bank_account">Bank account</string>
    <string name="notifications">Notifications</string>
    <string name="help_center">Help Center</string>
    <string name="frequent_questions">Frequent questions</string>
    <string name="contact_us">Contact us</string>
    <string name="others">Others</string>
    <string name="about_camarounds">About Camarounds</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="logout">Logout</string>
    <string name="modify_quote">Modify Quote</string>
    <string name="pay_now">Pay now</string>
    <string name="you_have_reached_the_maximum_negative_balance_allowed_pay_it_to_be_able_to_be_hired">You have reached the maximum negative balance allowed, pay it to be able to be hired.</string>
    <string name="transaction_history">Transaction History</string>
    <string name="my_balance">My balance</string>
    <string name="camaround_payment">Camaround Payment</string>
    <string name="commission">Commission</string>
    <string name="transferred_balance">Transferred Balance</string>
    <string name="save">Save</string>
    <string name="bank_account_to_receive_your_payments">Bank account to receive your payments.</string>
    <string name="account_holder">Account holder</string>
    <string name="write_the_account_holder">Write the account holder</string>
    <string name="account_number">Account number</string>
    <string name="write_the_account_number">Write the Account number</string>
    <string name="name_of_the_bank">Name of the bank</string>
    <string name="select_bank">Select bank</string>
    <string name="account_type">Account type</string>
    <string name="saving">Saving</string>
    <string name="stream">Stream</string>
    <string name="notification">Notification</string>
    <string name="push_notification">Push Notification</string>
    <string name="configure_your_work_area">CONFIGURE YOUR WORK AREA</string>
    <string name="address_location">Address / Location</string>
    <string name="write_an_address">Write an Address</string>
    <string name="range_radius">Range Radius</string>
    <string name="select_your_range_radius">Select your range radius</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="amount_to_pay">Amount to pay</string>
    <string name="payment_method">Payment Method</string>
    <string name="card_payment">Card Payment</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="pay">Pay</string>
    <string name="upload_image">Upload Image</string>
    <string name="bank">Bank</string>
    <string name="send_email">Send Email</string>
    <string name="card_number">Card Number</string>
    <string name="write_the_card_number">Write the card number</string>
    <string name="exp_month">Exp. Month</string>
    <string name="mm">MM</string>
    <string name="exp_year">Exp. Year</string>
    <string name="yyyy">YYYY</string>
    <string name="name_on_card">Name on Card</string>
    <string name="writethe_name_on_card">Write the name on card</string>
    <string name="name">Name</string>
    <string name="code">Code</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="camaround_details">Camaround details</string>
    <string name="client">Client</string>
    <string name="descripci_n">Descripción</string>
    <string name="images_files">Images / Files</string>
    <string name="location">Location</string>
    <string name="quotation">Quotes</string>
    <string name="what_you_will_be_paid">What you will be paid</string>
    <string name="perform_in">Perform in</string>
    <string name="your_quote">Your Quote</string>
    <string name="includes_materials">Includes materials</string>
    <string name="comments">Comments</string>
    <string name="the_commission_will_be_charged_to_your_account_when_the_client_awards_you_the_camaround_and_you_accept_it">The commission will be charged to your account when the client awards you the Camaround and you accept it.</string>
    <string name="does_the_materials_include_your_quote">Does the materials include your Quote?</string>
    <string name="you_can_describe_your_experience_similar_jobs_special_conditions_etc">You can describe your experience, similar jobs, special conditions, etc.</string>
    <string name="send_quote">Send quote</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="to_refuse">To refuse</string>
    <string name="cash">Cash</string>
    <string name="tu_camaround">Tu Camaround</string>
    <string name="share">Share</string>
    <string name="about_me">About me</string>
    <string name="_100_completed">0% Completed</string>
    <string name="_32_ratings">0 Ratings</string>
    <string name="work_done">Work done</string>
    <string name="ratings_and_reviews">Ratings and reviews</string>
    <string name="nueva_contrase_a">Nueva Contraseña</string>
    <string name="still_need_help">Still need help?</string>
    <string name="type_of_consultation">Type of Consultation</string>
    <string name="reference_number">Reference Number</string>
    <string name="upload_files">Upload files</string>
    <string name="how_can_we_help_you">How can we help you?</string>
    <string name="please_describe_what_you_need">Please describe what you need</string>
    <string name="send">Send</string>
    <string name="request_received">Request received</string>
    <string name="your_case_has_been_sent_to_our_help_center_we_will_contact_you_as_soon_as_possible">Your case has been sent to our help center, we will contact you as soon as possible.</string>
    <string name="a_copy_of_your_request_has_been_sent_to_your_email">A copy of your request has been sent to your email</string>
    <string name="to_return">To return</string>
    <string name="additional_information">Additional Information</string>
    <string name="photos_files">Photos / Files</string>
    <string name="view">View</string>
    <string name="paint_a_wall">Paint a Wall</string>
    <string name="contract">Contract</string>
    <string name="write_a_message">Write a message ...</string>
    <string name="please_sent_your_proof_of_payment_made_to_our_account">Please sent your proof of payment made to our account.</string>
    <string name="default_notification_channel_id">CamaroundsP</string>
    <!--image crop code text -->
    <string name="file_provider_authorities" translatable="false">com.pcamaround.provider</string>
    <string name="permission_message">You have forcefully denied some of the required permissions for this action. Please open settings, go to permissions and allow them.</string>
    <string name="toast_unexpected_error">Unexpected error</string>
    <string name="pic_not_taken_error">Picture was not taken!</string>
    <string name="toast_cannot_retrieve_selected_image">Cannot retrieve selected image</string>
    <string name="toast_cannot_retrieve_cropped_image">Cannot retrieve cropped image</string>
    <string name="photo_jpg">_photo.jpg</string>
    <string name="label_select_picture">Select Picture</string>
    <string name="settings">Settings</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="please_register_or_access_your_account">Please register or access your account</string>
    <string name="sign_up1">Sign up</string>
    <string name="verify_your_account">Verify your account</string>
    <string name="enter_the_code">Enter the code</string>
    <string name="resend">Resend</string>
    <string name="don_t_get_the_code">Don\'t get the code?</string>
    <string name="we_have_send_you_an_access_code_via_to_complete_the_verification">We have send you an access code via to complete the verification.</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="reset_password">Reset Password</string>
    <string name="facebook_app_id" translatable="false">436712264127915</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb436712264127915</string>

    <string name="slide_to_cancel">Slide to cancel</string>
</resources>
