<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.HelpCenterSuccessActivity">

        <include
            android:id="@+id/myToolbar"
            layout="@layout/toolbar" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/myToolbar"
            android:fillViewport="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_help_success"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_60"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_32"
                    android:layout_marginEnd="@dimen/dp_32"
                    android:fontFamily="@font/rubik_regular"
                    android:text="@string/request_received"
                    android:textColor="@color/colorGray"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:lineHeight="@dimen/dp_26"
                    android:layout_marginTop="@dimen/dp_40"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_32"
                    android:layout_marginEnd="@dimen/dp_32"
                    android:fontFamily="@font/rubik_regular"
                    android:text="@string/your_case_has_been_sent_to_our_help_center_we_will_contact_you_as_soon_as_possible"
                    android:textColor="@color/colorGray"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:lineHeight="@dimen/dp_26"
                    android:layout_marginTop="@dimen/dp_30"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_32"
                    android:layout_marginEnd="@dimen/dp_32"
                    android:fontFamily="@font/rubik_regular"
                    android:text="@string/a_copy_of_your_request_has_been_sent_to_your_email"
                    android:textColor="@color/colorGray"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:lineHeight="@dimen/dp_26"
                    android:layout_marginTop="@dimen/dp_30"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnToReturn"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_54"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/dp_32"
            android:layout_marginBottom="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_32"
            android:layout_marginStart="@dimen/dp_32"
            android:backgroundTint="@color/color_primary"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/to_return"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:visibility="visible" />

    </RelativeLayout>
</layout>