<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F7F8FA"
        tools:context=".activities.BankTransferActivity">

        <include
            android:id="@+id/myToolbar"
            layout="@layout/toolbar" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/myToolbar"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_240"
                    android:layout_marginStart="@dimen/dp_32"
                    android:layout_marginTop="@dimen/dp_30"
                    android:layout_marginEnd="@dimen/dp_32"
                    android:background="@drawable/bg_dashed_border"
                    android:gravity="center">


                    <ImageView
                        android:id="@+id/ivUpload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/dp_4"
                        android:src="@drawable/ic_upload_image" />

                    <TextView
                        android:id="@+id/tvUploadImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_4"
                        android:fontFamily="@font/rubik_regular"
                        android:text="@string/upload_image"
                        android:textColor="@color/colorGray"
                        android:textSize="16sp" />


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_32"
                    android:layout_marginTop="@dimen/dp_40"
                    android:layout_marginEnd="@dimen/dp_32"
                    android:fontFamily="@font/rubik_regular"
                    android:text="@string/bank"
                    android:textColor="@color/colorDarkBlack"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginStart="@dimen/dp_32"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginEnd="@dimen/dp_32"
                    android:background="@drawable/bg_edit_fill_with_border">

                    <TextView
                        android:id="@+id/etBank"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/dp_15"
                        android:layout_marginEnd="@dimen/dp_16"
                        android:background="@color/tranparent"
                        android:drawableEnd="@drawable/ic_spinner_icon"
                        android:fontFamily="@font/rubik_regular"
                        android:gravity="center|left"
                        android:hint="@string/select_bank"
                        android:textColor="@color/colorDarkBlack"
                        android:textColorHint="@color/colorHintText"
                        android:textSize="18sp" />


                </RelativeLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSendEmail"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_54"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/dp_32"
            android:layout_marginEnd="@dimen/dp_32"
            android:layout_marginBottom="@dimen/dp_20"
            android:backgroundTint="@color/color_primary"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/send_email"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:visibility="visible" />

    </RelativeLayout>
</layout>